// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisitEditorModal [NEGATIVE] should render with broken props 1`] = `
.c61 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c63 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c59 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c59:hover {
  cursor: pointer;
}

.c59 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c59 > div svg {
  margin-right: 0.25rem;
}

.c59 > div {
  color: #4475E3;
}

.c59 > div svg {
  fill: #4475E3;
}

.c59:hover:enabled > div {
  color: #2F65E0;
}

.c59:hover:enabled > div svg {
  fill: #2F65E0;
}

.c59:hover:enabled:active > div {
  color: #2057D5;
}

.c59:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c59:disabled > div {
  color: #B3C6F1;
}

.c59:disabled > div svg {
  fill: #B3C6F1;
}

.c59:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c59:focus-visible > div {
  color: #4475E3;
}

.c59:focus-visible > div svg {
  fill: #4475E3;
}

.c62 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c62 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c62 > div svg {
  margin-right: 0.25rem;
}

.c62 > div {
  color: #FFFFFF;
}

.c62 > div svg {
  fill: #FFFFFF;
}

.c62:hover:enabled {
  background-color: #2F65E0;
}

.c62:disabled {
  background-color: #B3C6F1;
}

.c62:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c60 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c48 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c48::-webkit-scrollbar {
  width: 1.25rem;
  height: 1.25rem;
}

.c48::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c48::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0.5rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 1.25rem;
}

.c49 {
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  outline: none;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
  background: transparent;
  overflow-y: auto;
  caret-color: #4475E3;
  overflow-x: hidden;
  resize: none;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  min-height: 1.5rem;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c51 {
  color: #808080;
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c33 {
  display: inline-block;
  position: relative;
}

.c27 {
  position: relative;
  width: 100%;
}

.c38 {
  position: relative;
  width: 100%;
  pointer-events: none;
}

.c31 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c40 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #DBDBDB;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c29 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c29:hover {
  cursor: pointer;
}

.c30 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c30:hover {
  border-color: #2F65E0;
}

.c39 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c39:hover {
  border-color: #2F65E0;
}

.c39 svg {
  fill: #B3C6F1;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c44 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c20 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c20:hover:enabled {
  border-color: #2F65E0;
}

.c20:active:enabled,
.c20:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c20:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c20::-webkit-input-placeholder {
  color: #808080;
}

.c20::-moz-placeholder {
  color: #808080;
}

.c20:-ms-input-placeholder {
  color: #808080;
}

.c20::placeholder {
  color: #808080;
}

.c20:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c20:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c20:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c20:disabled::placeholder {
  color: #DBDBDB;
}

.c20:-webkit-autofill,
.c20:-webkit-autofill:hover,
.c20:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c20:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c17 {
  max-height: 3.5rem;
}

.c17:hover .c19:enabled {
  border-color: #2F65E0;
}

.c46 {
  max-height: auto;
}

.c46:hover .c19:enabled {
  border-color: #2F65E0;
}

.c16 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c36 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: rgba(0,0,0,0.38);
  gap: 0.5rem;
  height: 1.125rem;
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  padding-left: 1rem;
  height: 1.0625rem;
}

.c4 {
  display: none;
  opacity: 0;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
}

.c6 {
  position: relative;
  z-index: 1000;
}

.c0 {
  position: relative;
  z-index: -1;
}

.c1 {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
}

.c5 {
  background-color: rgba(0,0,0,0.4);
}

.c2 {
  z-index: 1001;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  box-sizing: border-box;
  padding: 1.5rem 1.5rem 1rem;
  overflow: visible;
  position: relative;
}

.c7 > * {
  min-width: 0;
  min-height: 0;
  overflow: visible;
}

.c9 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.c10 {
  color: #474747;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1.5rem;
  line-height: 2.0125rem;
  font-weight: 600;
  font-style: normal;
  margin-bottom: 1.5rem;
}

.c58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-top: 2.5rem;
}

.c8 {
  padding: 2rem;
  width: 35.5rem;
  padding: 2.5rem;
  width: 60.8125rem;
}

.c52 {
  grid-area: documents;
}

.c57 {
  text-align: right;
  color: inherit;
}

.c53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  border: 0.0625rem solid #ECF1FC;
  border-radius: 0.25rem;
  height: 15.875rem;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  cursor: pointer;
  position: relative;
}

.c56 {
  display: none;
}

.c54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  gap: 0;
}

.c55 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
}

.c14 {
  grid-area: participant-id;
}

.c18 {
  position: relative;
}

.c41 {
  grid-area: check-in-by;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
}

.c43 {
  display: block;
}

.c45 {
  grid-area: notes;
}

.c50 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  border: 0.0625rem solid #ECF1FC;
  border-radius: 0.25rem;
  padding: 1rem;
  padding-bottom: 1.9375rem;
  height: 15.875rem;
  -webkit-transition: border-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border-color 300ms cubic-bezier(0.45,0.05,0,1);
}

.c50:focus-visible,
.c50:hover {
  border-color: #4475E3;
}

.c26 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
}

.c24 {
  max-width: 19.5rem;
  height: 3.5rem;
  background-color: #F7F8FA;
  border-radius: 0.25rem;
  border-width: 0.0625rem;
  border-color: transparent;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c24:hover {
  cursor: pointer;
}

.c24 .c25 {
  margin-left: 0.9375rem;
}

.c37 {
  max-width: 19.5rem;
  height: 3.5rem;
  background-color: #F7F8FA;
  border-radius: 0.25rem;
  border-width: 0.0625rem;
  border-color: transparent;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c37:hover {
  cursor: pointer;
}

.c37 .c25 {
  margin-left: 0.9375rem;
  color: #DBDBDB;
}

.c23 {
  display: grid;
  grid-template-columns: 19.5rem 9.75rem 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
}

.c32 {
  fill: #4475E3;
}

.c28 {
  width: 9.75rem;
}

.c34 {
  display: block;
}

.c35 {
  grid-area: visit-end;
}

.c22 {
  grid-area: visit-start;
}

.c12 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
}

.c13 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  row-gap: 1.0625rem;
  grid-template-columns: 23.0625rem 31.25rem;
  grid-template-areas: 'participant-id visit-start' 'check-in-by visit-end' 'notes documents';
}

<body>
  <div />
  <div
    data-testid="tooltip-portal"
    id="backdrop-portal-modal-4"
  >
    <div
      class="c0"
      data-testid="backdrop-container"
    >
      <div
        class="c1 c2"
        data-testid="backdrop-content"
      >
        <div
          class="c3"
        />
      </div>
      <div
        class="c4"
        style="opacity: 0; display: block;"
      >
        <div
          class="c1 c5"
          data-testid="backdrop"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="tooltip-portal"
    id="backdrop-portal-modal-5"
  >
    <div
      class="c6"
      data-testid="backdrop-container"
    >
      <div
        class="c1 c2"
        data-testid="backdrop-content"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
            style="opacity: 1; display: block;"
          >
            <div
              aria-hidden="false"
              aria-modal="true"
              class="c7 c8"
              data-testid="modal"
              role="alertdialog"
              tabindex="0"
            >
              <div
                class="c9"
                data-testid="card-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                    data-testid="modal-title"
                  >
                    Add In-Lab Visit
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class="c12"
                    >
                      Visit Information
                    </div>
                    <div
                      class="c13"
                    >
                      <div
                        class="c14"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            Participant Id
                          </div>
                          <div
                            class="c17"
                          >
                            <div
                              class="c18"
                            >
                              <input
                                class="c19 c20"
                                data-testid="visit-participant-id"
                                maxlength="256"
                                placeholder="Enter participant ID"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="c21"
                          >
                             
                          </div>
                        </div>
                      </div>
                      <div
                        class="c22"
                      >
                        <div
                          class="c23"
                        >
                          <div
                            class="c15"
                          >
                            <div
                              class="c16"
                              data-testid="input-description"
                            >
                              Visit start
                            </div>
                            <div
                              class="c17"
                            >
                              <div
                                class="c24"
                                data-testid="visit-date-start"
                              >
                                <div
                                  class="c25 c26"
                                  data-testid="input-label"
                                >
                                  Select date
                                </div>
                                <svg
                                  class=""
                                />
                              </div>
                            </div>
                            <div
                              class="c21"
                            >
                               
                            </div>
                          </div>
                          <div
                            class="c15"
                          >
                            <div
                              class="c16"
                              data-testid="input-description"
                            >
                               
                            </div>
                            <div
                              class="c17"
                            >
                              <div
                                class="c27 c28"
                                data-testid="visit-time-start"
                              >
                                <div
                                  class="c29 c30"
                                  data-testid="value-item"
                                >
                                  <div
                                    class="c31"
                                  >
                                    Select time
                                  </div>
                                  <svg
                                    class="c32"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="c21"
                            >
                               
                            </div>
                          </div>
                          <span
                            class="c33"
                            data-testid="tooltip-container"
                          >
                            <svg
                              class="c34"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        class="c35"
                      >
                        <div
                          class="c23"
                        >
                          <div
                            class="c15"
                          >
                            <div
                              class="c36"
                              data-testid="input-description"
                            >
                              Visit end
                            </div>
                            <div
                              class="c17"
                            >
                              <div
                                class="c37"
                                data-testid="visit-date-end"
                              >
                                <div
                                  class="c25 c26"
                                  data-testid="input-label"
                                >
                                  Select date
                                </div>
                                <svg
                                  class=""
                                />
                              </div>
                            </div>
                            <div
                              class="c21"
                            >
                               
                            </div>
                          </div>
                          <div
                            class="c15"
                          >
                            <div
                              class="c36"
                              data-testid="input-description"
                            >
                               
                            </div>
                            <div
                              class="c17"
                            >
                              <div
                                class="c38 c28"
                                data-testid="visit-time-end"
                              >
                                <div
                                  class="c29 c39"
                                  data-testid="value-item"
                                >
                                  <div
                                    class="c40"
                                  >
                                    Select time
                                  </div>
                                  <svg
                                    class="c32"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="c21"
                            >
                               
                            </div>
                          </div>
                          <span
                            class="c33"
                            data-testid="tooltip-container"
                          >
                            <svg
                              class="c34"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        class="c41"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            <div
                              class="c42"
                            >
                              <span>
                                Checked in by
                              </span>
                              <span
                                class="c33"
                                data-testid="tooltip-container"
                              >
                                <svg
                                  class="c43"
                                />
                              </span>
                            </div>
                          </div>
                          <div
                            class="c17"
                          >
                            <input
                              class="c19 c20"
                              data-testid="checked-by-input"
                              maxlength="30"
                              placeholder="Enter name"
                              value=""
                            />
                            <div
                              class="c44"
                            />
                          </div>
                          <div
                            class="c21"
                          >
                             
                          </div>
                        </div>
                      </div>
                      <div
                        class="c45"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            Notes
                          </div>
                          <div
                            class="c46"
                          >
                            <div
                              class="c47"
                            >
                              <textarea
                                class=" c48 c49 c50"
                                data-testid="visit-notes-textarea"
                                placeholder="Write here about the participant visit..."
                                rows="1"
                              />
                              <div
                                class="c51"
                              >
                                0 / 500
                              </div>
                            </div>
                          </div>
                          <div
                            class="c21"
                          >
                             
                          </div>
                        </div>
                      </div>
                      <div
                        class="c52"
                        data-testid="visit-documents"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            Upload documents
                          </div>
                          <div
                            class="c46"
                          >
                            <div
                              class="c53"
                              data-testid="visit-documents-drop-area"
                            >
                              <div
                                class="c54"
                              >
                                <svg />
                                <div
                                  class="c55"
                                >
                                  Drag & Drop up to 10 files here
                                </div>
                              </div>
                            </div>
                            <input
                              accept="image/jpeg,image/png,application/pdf,text/plain,application/xml,text/xml,text/csv"
                              class="c56"
                              data-testid="visit-documents-files-input"
                              multiple=""
                              type="file"
                            />
                          </div>
                          <div
                            class="c21"
                          >
                            <div
                              class="c57"
                            >
                              Upload either XLM, CSV, PNG, JPG, PDF, or TXT file types (10.00MB max)
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c58"
                  >
                    <button
                      class="c59"
                      color="primary"
                      data-testid="decline-button"
                      fill="text"
                      style="overflow: hidden; position: relative;"
                      tabindex="0"
                      width="164"
                    >
                      <div
                        class="c60"
                        data-testid="content"
                      >
                        Cancel
                      </div>
                      <div
                        class="c61"
                        color="primaryLightPressed"
                        opacity="1,1"
                        scale="0"
                        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
                      />
                    </button>
                    <button
                      class="c62"
                      data-testid="accept-button"
                      disabled=""
                      fill="solid"
                      style="overflow: hidden; position: relative;"
                      tabindex="0"
                      width="164"
                    >
                      <div
                        class="c60"
                        data-testid="content"
                      >
                        Save
                      </div>
                      <div
                        class="c63"
                        color="primaryPressed"
                        opacity="1,1"
                        scale="0"
                        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4"
        style="opacity: 1; display: block;"
      >
        <div
          class="c1 c5"
          data-testid="backdrop"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="tooltip-portal"
    id="backdrop-portal-modal-6"
  >
    <div
      class="c0"
      data-testid="backdrop-container"
    >
      <div
        class="c1 c2"
        data-testid="backdrop-content"
      >
        <div
          class="c3"
        />
      </div>
      <div
        class="c4"
        style="opacity: 0; display: block;"
      >
        <div
          class="c1 c5"
          data-testid="backdrop"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`VisitEditorModal should render 1`] = `
.c59 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c61 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c57 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c57:hover {
  cursor: pointer;
}

.c57 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c57 > div svg {
  margin-right: 0.25rem;
}

.c57 > div {
  color: #4475E3;
}

.c57 > div svg {
  fill: #4475E3;
}

.c57:hover:enabled > div {
  color: #2F65E0;
}

.c57:hover:enabled > div svg {
  fill: #2F65E0;
}

.c57:hover:enabled:active > div {
  color: #2057D5;
}

.c57:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c57:disabled > div {
  color: #B3C6F1;
}

.c57:disabled > div svg {
  fill: #B3C6F1;
}

.c57:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c57:focus-visible > div {
  color: #4475E3;
}

.c57:focus-visible > div svg {
  fill: #4475E3;
}

.c60 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 10.25rem;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c60 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c60 > div svg {
  margin-right: 0.25rem;
}

.c60 > div {
  color: #FFFFFF;
}

.c60 > div svg {
  fill: #FFFFFF;
}

.c60:hover:enabled {
  background-color: #2F65E0;
}

.c60:disabled {
  background-color: #B3C6F1;
}

.c60:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c58 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c46 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #FFFFFF;
  -moz-scrollbar-color: #4475E3 #FFFFFF;
  -ms-scrollbar-color: #4475E3 #FFFFFF;
  scrollbar-color: #4475E3 #FFFFFF;
}

.c46::-webkit-scrollbar {
  width: 1.25rem;
  height: 1.25rem;
}

.c46::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c46::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0.5rem solid #FFFFFF;
  width: 0.25rem;
  min-height: 1.25rem;
}

.c47 {
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  outline: none;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
  background: transparent;
  overflow-y: auto;
  caret-color: #4475E3;
  overflow-x: hidden;
  resize: none;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  min-height: 1.5rem;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c49 {
  color: #808080;
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.c36 {
  display: inline-block;
  position: relative;
}

.c29 {
  position: relative;
  width: 100%;
}

.c33 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c31 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid transparent;
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c31:hover {
  cursor: pointer;
}

.c32 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
  background-color: #FFEBEB;
  border-color: #FFEBEB !important;
}

.c32:hover {
  border-color: #2F65E0;
}

.c32 svg {
  fill: #D14343;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.c42 > svg {
  position: relative;
  bottom: 2.6875rem;
  left: calc(100% - 0.5rem);
}

.c20 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  box-sizing: border-box;
  height: 3.5rem;
  width: 100%;
  margin: 0;
  padding: 1rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid #F7F8FA;
  border-radius: 0.25rem;
  -webkit-transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border 300ms cubic-bezier(0.45,0.05,0,1);
  caret-color: #4475E3;
}

.c20:hover:enabled {
  border-color: #2F65E0;
}

.c20:active:enabled,
.c20:focus-visible {
  outline: none;
  border-color: #4475E3;
}

.c20:disabled {
  color: rgba(0,0,0,0.38);
  border-color: transparent;
  background-color: #f8f8f8;
}

.c20::-webkit-input-placeholder {
  color: #808080;
}

.c20::-moz-placeholder {
  color: #808080;
}

.c20:-ms-input-placeholder {
  color: #808080;
}

.c20::placeholder {
  color: #808080;
}

.c20:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c20:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c20:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c20:disabled::placeholder {
  color: #DBDBDB;
}

.c20:-webkit-autofill,
.c20:-webkit-autofill:hover,
.c20:-webkit-autofill:focus {
  border: 0.0625rem solid #4475E3;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
  background-color: #F7F8FA !important;
  background-image: unset !important;
  -webkit-text-fill-color: #838383;
}

.c20:-webkit-autofill:focus {
  border-color: #4475E3;
}

.c17 {
  max-height: 3.5rem;
}

.c17:hover .c19:enabled {
  border-color: #2F65E0;
}

.c44 {
  max-height: auto;
}

.c44:hover .c19:enabled {
  border-color: #2F65E0;
}

.c28 {
  max-height: 3.5rem;
}

.c28:hover .c19:enabled {
  border-color: transparent;
}

.c16 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  gap: 0.5rem;
  height: 1.125rem;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  gap: 0.5rem;
  height: 1.125rem;
}

.c35 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #D14343;
  padding-left: 1rem;
  height: 1.0625rem;
}

.c21 {
  font-family: Inter,sans-serif;
  font-size: 0.625rem;
  line-height: 0.9375rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  padding-left: 1rem;
  height: 1.0625rem;
}

.c4 {
  display: none;
  opacity: 0;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
}

.c6 {
  position: relative;
  z-index: 1000;
}

.c0 {
  position: relative;
  z-index: -1;
}

.c1 {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
}

.c5 {
  background-color: rgba(0,0,0,0.4);
}

.c2 {
  z-index: 1001;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  box-sizing: border-box;
  padding: 1.5rem 1.5rem 1rem;
  overflow: visible;
  position: relative;
}

.c7 > * {
  min-width: 0;
  min-height: 0;
  overflow: visible;
}

.c9 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.c10 {
  color: #474747;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 1.5rem;
  line-height: 2.0125rem;
  font-weight: 600;
  font-style: normal;
  margin-bottom: 1.5rem;
}

.c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-top: 2.5rem;
}

.c8 {
  padding: 2rem;
  width: 35.5rem;
  padding: 2.5rem;
  width: 60.8125rem;
}

.c50 {
  grid-area: documents;
}

.c55 {
  text-align: right;
  color: inherit;
}

.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  border: 0.0625rem solid #ECF1FC;
  border-radius: 0.25rem;
  height: 15.875rem;
  -webkit-transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: background-color 300ms cubic-bezier(0.45,0.05,0,1);
  cursor: pointer;
  position: relative;
}

.c54 {
  display: none;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  gap: 0;
}

.c53 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
}

.c14 {
  grid-area: participant-id;
}

.c18 {
  position: relative;
}

.c39 {
  grid-area: check-in-by;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
}

.c41 {
  display: block;
}

.c43 {
  grid-area: notes;
}

.c48 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  border: 0.0625rem solid #ECF1FC;
  border-radius: 0.25rem;
  padding: 1rem;
  padding-bottom: 1.9375rem;
  height: 15.875rem;
  -webkit-transition: border-color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: border-color 300ms cubic-bezier(0.45,0.05,0,1);
}

.c48:focus-visible,
.c48:hover {
  border-color: #4475E3;
}

.c26 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
}

.c24 {
  max-width: 19.5rem;
  height: 3.5rem;
  background-color: #F7F8FA;
  border-radius: 0.25rem;
  border-width: 0.0625rem;
  border-color: transparent;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c24:hover {
  cursor: pointer;
}

.c24 .c25 {
  margin-left: 0.9375rem;
}

.c23 {
  display: grid;
  grid-template-columns: 19.5rem 9.75rem 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
}

.c34 {
  fill: #4475E3;
}

.c30 {
  width: 9.75rem;
}

.c37 {
  display: block;
}

.c38 {
  grid-area: visit-end;
}

.c22 {
  grid-area: visit-start;
}

.c12 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
}

.c13 {
  display: grid;
  -webkit-column-gap: 1.5rem;
  column-gap: 1.5rem;
  row-gap: 1.0625rem;
  grid-template-columns: 23.0625rem 31.25rem;
  grid-template-areas: 'participant-id visit-start' 'check-in-by visit-end' 'notes documents';
}

<body>
  <div />
  <div
    data-testid="tooltip-portal"
    id="backdrop-portal-modal-4"
  >
    <div
      class="c0"
      data-testid="backdrop-container"
    >
      <div
        class="c1 c2"
        data-testid="backdrop-content"
      >
        <div
          class="c3"
        />
      </div>
      <div
        class="c4"
        style="opacity: 0; display: block;"
      >
        <div
          class="c1 c5"
          data-testid="backdrop"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="tooltip-portal"
    id="backdrop-portal-modal-5"
  >
    <div
      class="c6"
      data-testid="backdrop-container"
    >
      <div
        class="c1 c2"
        data-testid="backdrop-content"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
            style="opacity: 1; display: block;"
          >
            <div
              aria-hidden="false"
              aria-modal="true"
              class="c7 c8"
              data-testid="modal"
              role="alertdialog"
              tabindex="0"
            >
              <div
                class="c9"
                data-testid="card-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                    data-testid="modal-title"
                  >
                    Edit In-Lab Visit
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class="c12"
                    >
                      Visit Information
                    </div>
                    <div
                      class="c13"
                    >
                      <div
                        class="c14"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            Participant Id
                          </div>
                          <div
                            class="c17"
                          >
                            <div
                              class="c18"
                            >
                              <input
                                class="c19 c20"
                                data-testid="visit-participant-id"
                                maxlength="256"
                                placeholder="Enter participant ID"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="c21"
                          >
                             
                          </div>
                        </div>
                      </div>
                      <div
                        class="c22"
                      >
                        <div
                          class="c23"
                        >
                          <div
                            class="c15"
                          >
                            <div
                              class="c16"
                              data-testid="input-description"
                            >
                              Visit start
                            </div>
                            <div
                              class="c17"
                            >
                              <div
                                class="c24"
                                data-testid="visit-date-start"
                              >
                                <div
                                  class="c25 c26"
                                  data-testid="input-label"
                                >
                                  Friday, Apr 07, 2023
                                </div>
                                <svg
                                  class=""
                                />
                              </div>
                            </div>
                            <div
                              class="c21"
                            >
                               
                            </div>
                          </div>
                          <div
                            class="c15"
                          >
                            <div
                              class="c27"
                              data-testid="input-description"
                            >
                               
                            </div>
                            <div
                              class="c28"
                            >
                              <div
                                class="c29 c30"
                                data-testid="visit-time-start"
                              >
                                <div
                                  class="c31 c32"
                                  data-testid="value-item"
                                >
                                  <div
                                    class="c33"
                                  >
                                    Select time
                                  </div>
                                  <svg
                                    class="c34"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="c35"
                              data-testid="input-error"
                            >
                              Select valid time
                            </div>
                          </div>
                          <span
                            class="c36"
                            data-testid="tooltip-container"
                          >
                            <svg
                              class="c37"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        class="c38"
                      >
                        <div
                          class="c23"
                        >
                          <div
                            class="c15"
                          >
                            <div
                              class="c16"
                              data-testid="input-description"
                            >
                              Visit end
                            </div>
                            <div
                              class="c17"
                            >
                              <div
                                class="c24"
                                data-testid="visit-date-end"
                              >
                                <div
                                  class="c25 c26"
                                  data-testid="input-label"
                                >
                                  Friday, Apr 07, 2023
                                </div>
                                <svg
                                  class=""
                                />
                              </div>
                            </div>
                            <div
                              class="c21"
                            >
                               
                            </div>
                          </div>
                          <div
                            class="c15"
                          >
                            <div
                              class="c27"
                              data-testid="input-description"
                            >
                               
                            </div>
                            <div
                              class="c28"
                            >
                              <div
                                class="c29 c30"
                                data-testid="visit-time-end"
                              >
                                <div
                                  class="c31 c32"
                                  data-testid="value-item"
                                >
                                  <div
                                    class="c33"
                                  >
                                    Select time
                                  </div>
                                  <svg
                                    class="c34"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="c35"
                              data-testid="input-error"
                            >
                              Select valid time
                            </div>
                          </div>
                          <span
                            class="c36"
                            data-testid="tooltip-container"
                          >
                            <svg
                              class="c37"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        class="c39"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            <div
                              class="c40"
                            >
                              <span>
                                Checked in by
                              </span>
                              <span
                                class="c36"
                                data-testid="tooltip-container"
                              >
                                <svg
                                  class="c41"
                                />
                              </span>
                            </div>
                          </div>
                          <div
                            class="c17"
                          >
                            <input
                              class="c19 c20"
                              data-testid="checked-by-input"
                              maxlength="30"
                              placeholder="Enter name"
                              value=""
                            />
                            <div
                              class="c42"
                            />
                          </div>
                          <div
                            class="c21"
                          >
                             
                          </div>
                        </div>
                      </div>
                      <div
                        class="c43"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            Notes
                          </div>
                          <div
                            class="c44"
                          >
                            <div
                              class="c45"
                            >
                              <textarea
                                class=" c46 c47 c48"
                                data-testid="visit-notes-textarea"
                                placeholder="Write here about the participant visit..."
                                rows="1"
                              />
                              <div
                                class="c49"
                              >
                                0 / 500
                              </div>
                            </div>
                          </div>
                          <div
                            class="c21"
                          >
                             
                          </div>
                        </div>
                      </div>
                      <div
                        class="c50"
                        data-testid="visit-documents"
                      >
                        <div
                          class="c15"
                        >
                          <div
                            class="c16"
                            data-testid="input-description"
                          >
                            Upload documents
                          </div>
                          <div
                            class="c44"
                          >
                            <div
                              class="c51"
                              data-testid="visit-documents-drop-area"
                            >
                              <div
                                class="c52"
                              >
                                <svg />
                                <div
                                  class="c53"
                                >
                                  Drag & Drop up to 10 files here
                                </div>
                              </div>
                            </div>
                            <input
                              accept="image/jpeg,image/png,application/pdf,text/plain,application/xml,text/xml,text/csv"
                              class="c54"
                              data-testid="visit-documents-files-input"
                              multiple=""
                              type="file"
                            />
                          </div>
                          <div
                            class="c21"
                          >
                            <div
                              class="c55"
                            >
                              Upload either XLM, CSV, PNG, JPG, PDF, or TXT file types (10.00MB max)
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c56"
                  >
                    <button
                      class="c57"
                      color="primary"
                      data-testid="decline-button"
                      fill="text"
                      style="overflow: hidden; position: relative;"
                      tabindex="0"
                      width="164"
                    >
                      <div
                        class="c58"
                        data-testid="content"
                      >
                        Cancel
                      </div>
                      <div
                        class="c59"
                        color="primaryLightPressed"
                        opacity="1,1"
                        scale="0"
                        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
                      />
                    </button>
                    <button
                      class="c60"
                      data-testid="accept-button"
                      disabled=""
                      fill="solid"
                      style="overflow: hidden; position: relative;"
                      tabindex="0"
                      width="164"
                    >
                      <div
                        class="c58"
                        data-testid="content"
                      >
                        Save
                      </div>
                      <div
                        class="c61"
                        color="primaryPressed"
                        opacity="1,1"
                        scale="0"
                        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c4"
        style="opacity: 1; display: block;"
      >
        <div
          class="c1 c5"
          data-testid="backdrop"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="tooltip-portal"
    id="backdrop-portal-modal-6"
  >
    <div
      class="c0"
      data-testid="backdrop-container"
    >
      <div
        class="c1 c2"
        data-testid="backdrop-content"
      >
        <div
          class="c3"
        />
      </div>
      <div
        class="c4"
        style="opacity: 0; display: block;"
      >
        <div
          class="c1 c5"
          data-testid="backdrop"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`VisitEditorModal should render 2`] = `null`;
